CSS: Apply highlight color on link, to avoid misalignment

--- a/sass/_emoji.scss
+++ b/sass/_emoji.scss
@@ -77,11 +77,7 @@
                         margin: 0;
                         height: 30px;
                         width: 32px;
-
-                        &.selected {
-                            background-color: var(--highlight-color);
-                        }
-                        &.picked {
+                        &.selected a {
                             background-color: var(--highlight-color);
                         }
                         a {
@@ -118,10 +114,7 @@
                             border: 1px var(--chat-head-color) solid;
                             border-bottom: none;
                         }
-                        &.selected {
-                            background-color: var(--highlight-color);
-                        }
-                        &:hover {
+                        &.selected a, &:hover a {
                             background-color: var(--highlight-color);
                         }
                         a {
